--- a/.github/workflows/livebuild.yml
+++ b/.github/workflows/livebuild.yml
@@ -2,9 +2,9 @@ name: windows
 
 on:
   push:
-    tags:
-    - 'v*'
-    
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 env:
   # Path to the solution file relative to the root of the project.
@@ -62,10 +62,8 @@ jobs:
             files: Build-Output/
             dest: MetaAudio-windows-x86.zip
 
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4
         with:
-            name: MetaAudio-${{ github.ref }}
-            files: |
-              MetaAudio-windows-x86.zip
+          name: MetaAudio-windows-x86.zip
+          path: MetaAudio-windows-x86.zip
