--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,9 +52,9 @@ jobs:
 
       - name: Copy dlls to Output
         run: |
-          copy "build\x86\Release\bin\MetaAudio.dll" "Build-Output\metahook\plugins"
-          copy "build\x86\Release\bin\sndfile.dll" "Build-Output\metahook\dlls"
-          copy "build\x86\Release\bin\OpenAL32.dll" "Build-Output\metahook\dlls"
+          copy "install\x86\Release\bin\MetaAudio.dll" "Build-Output\metahook\plugins"
+          copy "install\x86\Release\bin\sndfile.dll" "Build-Output\metahook\dlls"
+          copy "install\x86\Release\bin\OpenAL32.dll" "Build-Output\metahook\dlls"
         shell: cmd
         
       - name: Zipping All
